@@ -183,6 +183,7 @@ TYPE GameState
   foe_freq(254) as integer           'A cache of the fight frequency for each formation set
   walk_through_walls as bool         'used for F11 cheat mode
   mouse_enabled as bool              'Mouse clicks trigger onkeypress script (initmouse called/mouse movement on)
+  click_keys as bool                 'Mouse clicks count for anykey, usekey, etc (cache of /mouse/click_keys)
   hero(sizeParty - 1) as HeroState
   debug_npc_info as integer          'NPC debug display. 0: off, 1: IDs/refs, 2: also show obstructions
   debug_textbox_info as bool         'Textbox debug display
